# cmake_base

./: .gitignore  CMakeLists.txt  main.cpp
include/greeter/: greeter.hpp
src/greeter/: CMakeLists.txt  greeter.cpp
tests/greeter/: CMakeLists.txt  greeter.cpp
